# ProKnow-RAG

./: .env.example  .gitignore  pyproject.toml
docs/: architecture.md
scripts/: benchmark.py  download_models.py  import_data.py
src/proknow_rag/: gui.py  main.py
src/proknow_rag/common/: config.py  exceptions.py  gpu_monitor.py  logging_config.py  retry.py
src/proknow_rag/data_preparation/: __init__.py  base.py  manager.py  strategies.py  validators.py
src/proknow_rag/data_preparation/chunkers/: __init__.py  ast_chunker.py  llm_chunker.py  recursive_chunker.py  semantic_chunker.py  structure_chunker.py
src/proknow_rag/data_preparation/parsers/: __init__.py  code_parser.py  llm_parser.py  markdown_parser.py  paper_parser.py  pdf_parser.py
src/proknow_rag/evaluation/: __init__.py  benchmark.py  metrics.py  retrieval_eval.py
src/proknow_rag/index_construction/: __init__.py  cache.py  embedder.py  index_builder.py  metadata_manager.py  qdrant_store.py
src/proknow_rag/retrieval/: __init__.py  compressor.py  hybrid_search.py  query_rewriter.py  query_router.py  reranker.py  validators.py
tests/data_preparation/: test_chunkers.py
tests/index_construction/: test_embedder.py  test_qdrant_store.py
tests/retrieval/: test_hybrid_search.py  test_reranker.py  test_validators.py
